set04/problem07_compile_errors.txt
Compilation started at 12/4/2023, 10:09:30 PM
c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Sukhith29\set04\problem07.c: In function 'main':
c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Sukhith29\set04\problem07.c:75:5: error: too few arguments to function 'output'
     output(fraction1, fraction2, sum);
     ^~~~~~
c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Sukhith29\set04\problem07.c:63:6: note: declared here
 void output(Fraction f1, Fraction f2, Fraction f3, Fraction sum) {
      ^~~~~~
Compilation finished at 12/4/2023, 10:09:30 PM
Compilation started at 12/4/2023, 10:10:27 PM
c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Sukhith29\set04\problem07.c: In function 'main':
c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Sukhith29\set04\problem07.c:75:5: error: too few arguments to function 'output'
     output(fraction1, fraction2, sum);
     ^~~~~~
c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Sukhith29\set04\problem07.c:63:6: note: declared here
 void output(Fraction f1, Fraction f2, Fraction f3, Fraction sum) {
      ^~~~~~
Compilation finished at 12/4/2023, 10:10:27 PM
Compilation started at 12/4/2023, 10:11:51 PM
c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Sukhith29\set04\problem07.c: In function 'main':
c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Sukhith29\set04\problem07.c:75:5: error: too few arguments to function 'output'
     output(fraction1, fraction2, sum);
     ^~~~~~
c:\Users\sukhi\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-Sukhith29\set04\problem07.c:63:6: note: declared here
 void output(Fraction f1, Fraction f2, Fraction f3, Fraction sum) {
      ^~~~~~
Compilation finished at 12/4/2023, 10:11:51 PM
Compilation started at 12/4/2023, 10:12:39 PM
Compilation finished at 12/4/2023, 10:12:39 PM
Compilation started at 12/4/2023, 10:12:48 PM
Compilation finished at 12/4/2023, 10:12:48 PM
